--- a/src/theme/scss/global.scss
+++ b/src/theme/scss/global.scss
@@ -1,5 +1,6 @@
-@import "core/mixins";
-@import "core/vars";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Rubik:wght@400;700&display=swap');
+@import 'core/mixins';
+@import 'core/vars';
 
 * {
   box-sizing: border-box;
@@ -34,8 +35,9 @@ img {
   }
 }
 
-
 .container {
+  max-width: 1180px;
+
   @include breakpoint(desktop) {
     padding-left: 0;
     padding-right: 0;
@@ -79,7 +81,7 @@ p {
 }
 
 .title {
-  color: $corePalette3;
+  color: $corePalette1;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -117,14 +119,41 @@ p {
   font-size: 20px;
   line-height: 30px;
   color: $colorWhite;
-  background-color: $corePalette2;
+  background-color: $corePalette1;
   border-radius: 0;
   padding: 8px 24px;
   border: none;
   margin-top: 32px;
+  transition: all ease 0.3s;
 
   &:hover {
-    background-color: $corePalette3;
+    background-color: $corePalette1;
+  }
+
+  &.outline {
+    color: $corePalette1;
+    background-color: transparent;
+    border: 1.5px solid $corePalette1;
+    padding: 0 16px;
+    font-size: 14px;
+    cursor: pointer;
+    outline: none;
+    font-weight: 600;
+    border-radius: 25px;
+    box-sizing: border-box;
+
+    a,
+    .nav-link {
+      color: $corePalette1 !important;
+    }
+
+    &:hover {
+      background-color: $corePalette1;
+      a,
+      .nav-link {
+        color: $colorWhite !important;
+      }
+    }
   }
 }
 
@@ -135,7 +164,7 @@ p {
   padding: 1rem 1rem;
   margin-bottom: 1rem;
   border: 1px solid #badbcc;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .wpcf7 form.failed .wpcf7-response-output,
@@ -147,7 +176,7 @@ p {
   padding: 1rem 1rem;
   margin-bottom: 1rem;
   border: 1px solid #f5c2c7;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .wpcf7 form.invalid .wpcf7-response-output,
@@ -158,7 +187,7 @@ p {
   padding: 1rem 1rem;
   margin-bottom: 1rem;
   border: 1px solid #ffecb5;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .wpcf7-not-valid-tip {
@@ -177,7 +206,7 @@ p {
   font-weight: 700;
   font-size: 20px;
   line-height: 34px;
-  color: $corePalette2 !important;
+  color: $corePalette1 !important;
   text-decoration: none;
   margin-top: 44px;
   display: block;
@@ -199,56 +228,56 @@ p {
     }
   }
 
-  &.white{
+  &.white {
     color: $colorWhite !important;
 
     &:before {
       content: url('images/icon-link-vacancy-white.svg');
     }
   }
-  &.beige{
-    color: $corePalette5 !important;
+  &.beige {
+    color: $corePalette1 !important;
 
     &:before {
       content: url('images/icon-link-beige.svg');
     }
   }
-  &.red{
-    color: $corePalette3 !important;
+  &.red {
+    color: $corePalette1 !important;
 
     &:before {
       content: url('images/icon-link-red.svg');
     }
   }
-
 }
 
-.pagination{
+.pagination {
   display: flex;
   margin: 0 0 80px 0;
   padding: 0;
 
-  .page-numbers{
+  .page-numbers {
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
-    color: $corePalette3;
+    color: $corePalette1;
     background-color: transparent;
     border-radius: 5px;
     margin: 0 2.5px;
     padding: 4px 12px;
     text-decoration: none;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 
-    &.current, &:hover{
-      background-color: $corePalette3;
+    &.current,
+    &:hover {
+      background-color: $corePalette1;
       color: $colorWhite;
     }
 
-    &.dots{
+    &.dots {
       background-color: transparent !important;
-      color: $corePalette3 !important;
+      color: $corePalette1 !important;
     }
   }
 }
@@ -357,7 +386,7 @@ p {
   border-radius: 4px;
   border-style: solid;
   border-width: 2px;
-  color: $corePalette3 !important;
+  color: $corePalette1 !important;
   display: block;
   font-size: 0.9em;
   font-weight: 700;
