--- a/src/theme/scss/bs5/bootstrap.scss
+++ b/src/theme/scss/bs5/bootstrap.scss
@@ -19,29 +19,29 @@
 @import "images";
 @import "containers";
 @import "grid";
-@import "tables";
-@import "forms";
-@import "buttons";
-@import "transitions";
-@import "dropdown";
-@import "button-group";
+// @import "tables";
+// @import "forms";
+// @import "buttons";
+// @import "transitions";
+// @import "dropdown";
+// @import "button-group";
 @import "nav";
 @import "navbar";
 @import "card";
-@import "accordion";
-@import "breadcrumb";
-@import "pagination";
-@import "badge";
-@import "alert";
-@import "progress";
-@import "list-group";
-@import "close";
-@import "toasts";
-@import "modal";
-@import "tooltip";
-@import "popover";
+// @import "accordion";
+// @import "breadcrumb";
+// @import "pagination";
+// @import "badge";
+// @import "alert";
+// @import "progress";
+// @import "list-group";
+// @import "close";
+// @import "toasts";
+// @import "modal";
+// @import "tooltip";
+// @import "popover";
 @import "carousel";
-@import "spinners";
+// @import "spinners";
 
 // Helpers
 @import "helpers";
