--- a/src/theme/scss/style.scss
+++ b/src/theme/scss/style.scss
@@ -18,3 +18,8 @@
 @import 'components/hero';
 @import 'components/services';
 @import 'components/benefits';
+@import 'components/platform';
+@import 'components/purpose';
+@import 'components/banner';
+@import 'components/download';
+@import 'components/footer';
