--- a/src/theme/scss/bs5/bootstrap.scss
+++ b/src/theme/scss/bs5/bootstrap.scss
@@ -40,7 +40,7 @@
 // @import "modal";
 // @import "tooltip";
 // @import "popover";
-@import "carousel";
+//@import "carousel";
 // @import "spinners";
 
 // Helpers
