--- a/wordpress/theme/scss/components/services.scss
+++ b/wordpress/theme/scss/components/services.scss
@@ -22,6 +22,12 @@
     z-index: 1;
   }
 
+  .col-lg-3{
+    @include breakpoint(xl) {
+      margin-bottom: 24px;
+    }
+  }
+
   .card {
     border-radius: 24px;
     padding: 16px 24px;
