--- a/wordpress/theme/scss/global.scss
+++ b/wordpress/theme/scss/global.scss
@@ -132,6 +132,10 @@ p {
   &:not(.nav-item) {
     min-width: 190px;
     display: inline-block;
+
+    @include breakpoint(xl) {
+      min-width: 0;
+    }
   }
 
   &:hover {
