--- a/wordpress/theme/scss/bs5/bootstrap.scss
+++ b/wordpress/theme/scss/bs5/bootstrap.scss
@@ -22,8 +22,8 @@
 // @import "tables";
 // @import "forms";
 // @import "buttons";
-// @import "transitions";
-// @import "dropdown";
+@import "transitions";
+//@import "dropdown";
 // @import "button-group";
 @import "nav";
 @import "navbar";
