--- a/wordpress/theme/scss/components/benefits.scss
+++ b/wordpress/theme/scss/components/benefits.scss
@@ -12,6 +12,13 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     padding-top: 64px;
+    
+    @include breakpoint(lg) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include breakpoint(mobile) {
+      grid-template-columns: 100%;
+    }
 
     span {
       display: block;
@@ -21,6 +28,10 @@
 
     .box {
       padding: 0 15px;
+
+      @include breakpoint(lg) {
+        margin-bottom: 32px;
+      }
 
       img {
         max-width: 60px;
