--- a/wordpress/theme/scss/components/download.scss
+++ b/wordpress/theme/scss/components/download.scss
@@ -12,21 +12,36 @@
     background: $colorBlack url('images/web_shape_pink_two.png') no-repeat 12px center;
     background-size: auto 100%;
 
+    @include breakpoint(lg) {
+      flex-direction: column;
+      padding: 24px;
+      margin-top: 96px;
+    }
+
     img {
       margin: -60px 0;
       max-width: 250px;
+
+      @include breakpoint(lg) {
+        margin: -64px 0 32px 0;
+      }
     }
 
     .text {
       max-width: 560px;
 
+      
       h2 {
         color: $colorWhite;
         font-size: 40px;
         font-weight: 700;
         line-height: 48px;
         margin-bottom: 32px;
-
+        
+        @include breakpoint(lg) {
+          text-align: center;
+        }
+        
         span {
           color: $corePalette1;
         }
@@ -34,6 +49,10 @@
 
       .store {
         display: flex;
+
+        @include breakpoint(lg) {
+          justify-content: center;
+        }
 
         a {
           margin-right: 10px;
