--- a/wordpress/theme/scss/components/footer.scss
+++ b/wordpress/theme/scss/components/footer.scss
@@ -6,6 +6,12 @@
   margin: 0;
   background-color: $colorGray;
 
+  .widget{
+    @include breakpoint(lg) {
+      margin: 0 0 40px 0;
+    }
+  }
+
   h4 {
     font-weight: 700;
     padding: 16px 0;
@@ -18,6 +24,10 @@
 
     &.inline {
       margin-top: 48px;
+
+      @include breakpoint(lg) {
+        margin-top: 0;
+      }
 
       li {
         display: inline-block;
